--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -136,7 +136,7 @@ Design and Developed by: potenzaglobalsolutions.com
 .mega-menu .menu-logo { padding: 20px 0; }
 .mega-menu .menu-logo img { height: 24px; }
 .mega-menu .menu-mobile-collapse-trigger { margin-top: 9px; }
-.mega-menu .menu-links { border:1px solid #e3e3e3; }
+.mega-menu .menu-links { border:1px solid #000000; }
 .mega-menu .menu-links > li { line-height: 44px;background:black; }
 .mega-menu .mobileTriggerButton { z-index: 1; }
 .search-top .search-btn { color: #323232; }
