--- a/public/css/mega_menu.css
+++ b/public/css/mega_menu.css
@@ -150,13 +150,14 @@
 }
 .mega-menu .menu-links {
   /*---------------------------------------- MENU LINKS */
-  margin: 0;
+  margin-top: -2px;
   padding: 0;
   display: block;
   float: right;
 }
 @media screen and (max-width: 992px) {
   .mega-menu .menu-links {
+    width: 100%;
     background: #000000;
   }
 }
